# prism-verify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
design/: 01-research-grounding.md  02-standards-compliance.md  03-compensators.md  04-citation-verification.md  05-http-and-receipts.md  06-roadmap.md  07-slice1-calibration.md  _run_citation_gate.mjs  _run_fleet_gate.mjs  fleet-receipts-dispatch.md  fleet-receipts-gate-result.json  honeypot-role-dispatch.md  honeypot-role-gate-result.json  specialist-injection-hardening-dispatch.md  specialist-injection-hardening-gate-result.json  sycophancy-gate-result.json  sycophancy-v0.2-dispatch.md  sycophancy-v0.2-gate-result.json  sycophancy-wedge-dispatch.md
eval/: RESULTS.md
eval/benchmarks/codejudgebench/: NOTICE.md  fixture.jsonl
eval/corpus/: MANIFEST.json  prevalence.json
eval/corpus/citations/: fresh.jsonl  public.jsonl
eval/corpus/code/: fresh.jsonl  public.jsonl
eval/corpus/tool_call/: fresh.jsonl  public.jsonl
npm/: README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  package.json
scripts/: verify.py
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
site/src/content/docs/handbook/: evaluation.md  getting-started.md  harvest-sink.md  http-service.md  index.md  local-verifier.md  receipts.md  reference.md  sycophancy.md
specialist/: V-D-INTEGRATION.md  verifier-v1.json
specialist/dataset/: PUBLISH_PLAN.md  SYCOPHANCY_RESULTS.md  audit.py  build_demo.py  build_sycophancy_ood.mjs  build_sycophancy_records.mjs  build_verifier_dataset.py  certify_sycophancy.py  certify_verifier.py  config.py  corpus_conjuncts.json  corpus_evidence.json  corpus_hops.json  corpus_triples.json  corpus_voice.json  corrupt.py  demo_records.jsonl  demo_train_sft.jsonl  gate_validation_records.json  gate_validation_report.txt  gated_phase2.jsonl  gen_phase2.jsonl  gen_phase2.out  gen_phase2.py  ingest_corpus.py  merge_corpus.py  phase2_records.jsonl  puzzles.py  sample_for_eyeball.py  sycophancy_config.py  sycophancy_ood.jsonl  sycophancy_records.jsonl  sycophancy_train_sft.jsonl  sycophancy_v02_exam_records.jsonl  sycophancy_v02_records.jsonl  sycophancy_v02_train_sft.jsonl  synth.py  validate_gate.out  validate_gate.py  verifier_exam_records.jsonl  (+2 more)
specialist/dataset/certify/: sycophancy-ood-soup.json  sycophancy-seed1337.json  sycophancy-seed42.json  sycophancy-soup.json  sycophancy-v02-ood-soup.json  sycophancy-v02-seed1337.json  sycophancy-v02-seed42.json  sycophancy-v02-soup.json  verifier-seed1337.json  verifier-seed42.json  verifier-soup.json  verifier-v2-soup.json
specialist/probes/: sycophancy_probes.py  test_sycophancy_probes.py
src/prism/: __init__.py  __main__.py
src/prism/cli/: main.py
src/prism/core/: citations.py  engine.py  observability.py  routing.py  setup.py  stripping.py  submodularity.py  sycophancy_panel.py  types.py
src/prism/eval/: __init__.py  calibrate.py  corpus.py  harvest.py  metrics.py  realbug.py  report.py  runner.py
src/prism/eval/benchmarks/: __init__.py  codejudgebench.py  harness.py
src/prism/http/: __init__.py  app.py  auth.py  errors.py  webhook.py
src/prism/lenses/: base.py  boundary.py  contract.py  groundedness.py  invariant.py  nli.py  registry.py  sycophancy.py
src/prism/mcp/: server.py
src/prism/probes/: __init__.py  sycophancy.py
src/prism/providers/: anthropic.py  base.py  google.py  local_verifier.py  ollama.py  openai.py  sycophancy.py
src/prism/receipts/: signing.py  store.py
src/prism/retrieval/: __init__.py  oracle.py
src/prism/security/: __init__.py  normalize.py  spotlight.py
tests/: conftest.py
tests/integration/: test_citation_groundedness_ollama_live.py  test_citations.py  test_compensate_after_verify.py  test_eval_family_ab_cli.py  test_eval_runner.py  test_http.py  test_local_verifier_live.py  test_meta_citations.py  test_sycophancy_panel_engine.py  test_verify_pipeline.py
tests/unit/: test_active_probes.py  test_auth.py  test_citation_spotlight.py  test_citations.py  test_cli.py  test_cli_probe_sycophancy.py  test_codejudgebench.py  test_engine.py  test_eval_calibrate.py  test_eval_corpus.py  test_eval_harvest.py  test_eval_metrics.py  test_eval_report.py  test_lenses.py  test_local_verifier.py  test_mcp.py  test_nli.py  test_observability.py  test_oracle.py  test_providers.py  test_realbug.py  test_receipts.py  test_retrieval.py  test_routing.py  test_routing_same_family_bypass.py  test_security_normalize.py  test_security_spotlight.py  test_signing.py  test_stripping.py  test_submodularity.py  test_sycophancy.py  test_sycophancy_panel.py  test_webhook.py
