[project]
name = "prism-verify"
version = "0.1.0"
description = "Runtime adjudication service for agent workflows. Family-different, reasoning-stripped, multi-lens verification with replayable receipts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["verification", "llm", "mcp", "agent", "adjudication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.0",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]
mcp = ["mcp>=1.0"]
http = ["fastapi>=0.115", "uvicorn>=0.30"]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "respx>=0.21",
]

[project.scripts]
prism = "prism.cli.main:cli"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/prism"
Repository = "https://github.com/mcp-tool-shop-org/prism"
Issues = "https://github.com/mcp-tool-shop-org/prism/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
