[project]
name = "prism-verify"
version = "1.3.0"
description = "Runtime adjudication service for agent workflows. Family-different, reasoning-stripped, multi-lens verification with replayable receipts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["verification", "llm", "mcp", "agent", "adjudication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

# Upper bounds cap the NEXT major only (DOC-B-005): a future major of any runtime dep could
# silently change behavior the verifier's soundness relies on, so cap majors conservatively
# (never pin patch/minor). httpx is pre-1.0, so its "major" is the 0.x minor -> cap at <1.
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "click>=8.0,<9",
    "ulid-py>=1.1,<2",
    # Ed25519 receipt signatures (v0.4): a different tool verifies a prism receipt with prism's
    # PUBLIC key, no shared secret. Core (not an extra) so `prism verify-receipt` always works.
    "cryptography>=42.0,<46",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40,<1"]
openai = ["openai>=1.50,<2"]
google = ["google-genai>=1.0,<2"]
mcp = ["mcp>=1.0,<2"]
http = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]
# Orthogonal NLI floor (opt-in): an encoder NLI cross-encoder vetoes a "supported" the LLM
# groundedness lens gave but a mechanistically-different model does not corroborate. Heavy; opt-in.
nli = ["torch>=2.0,<3", "transformers>=4.40,<5", "sentencepiece>=0.2,<1"]
# CodeJudgeBench harness (opt-in): the HF `datasets` lib to load mattymchen/codejudgebench on
# demand. The offline fixture path needs NEITHER network nor this lib (like nli works torch-free).
bench = ["datasets>=2.18,<4"]
all = [
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "google-genai>=1.0,<2",
    "mcp>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "torch>=2.0,<3",
    "transformers>=4.40,<5",
    "sentencepiece>=0.2,<1",
    "datasets>=2.18,<4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "respx>=0.21",
]

[project.scripts]
prism = "prism.cli.main:cli"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/prism-verify"
Repository = "https://github.com/mcp-tool-shop-org/prism-verify"
Issues = "https://github.com/mcp-tool-shop-org/prism-verify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
